[gd_scene load_steps=5 format=2]

[ext_resource path="res://flappyfont.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Interface.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_color = Color( 0.0980392, 0.772549, 0.823529, 1 )
font_data = ExtResource( 1 )

[node name="Interface" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="MouseFollow" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -167.5
margin_top = -36.5
margin_right = 167.5
margin_bottom = 36.5
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.027451, 0.894118, 0, 1 )
text = "Mouse Follow"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TouchAndPlay" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -167.5
margin_top = 73.5
margin_right = 167.5
margin_bottom = 146.5
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.894118, 0.439216, 0, 1 )
text = "Touch And Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -167.5
margin_top = 179.5
margin_right = 167.5
margin_bottom = 252.5
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.419608, 0.286275, 0.568627, 1 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shuriken" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -214.0
margin_top = -175.5
margin_right = 214.0
margin_bottom = -74.5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0980392, 0.835294, 0.85098, 1 )
custom_colors/font_outline_modulate = Color( 0.215686, 0.180392, 0.180392, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = 4
custom_constants/shadow_offset_y = 20
text = "Shuriken"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MouseFollow" to="." method="_on_MouseFollow_pressed"]
[connection signal="pressed" from="TouchAndPlay" to="." method="_on_MouseFollow2_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
